# CPP_Neural_Network

./: CMakeLists.txt  README.md
include/: layer.h  neural_network.h  neuron.h
src/: layer.cpp  main.cpp  neural_network.cpp  neuron.cpp
